# chimp

./: .gitignore  AUTHORS  ChangeLog  NEWS  README  THANKS  acinclude.m4  configure.ac
src/: .gitignore  Makefile.am  README  chimp.cc  chimp.h  compare.cc  compare.h  constant.cc  constant.h  counter.cc  counter.h  debug.cc  debug.h  except.h  file.cc  file.h  handler.cc  handler.h  k.cc  k.h  manager.cc  manager.h  mech_lex.h  mech_lex.ll  mech_parse.yy  mechanism.cc  mechanism.h  model_mech.cc  model_mech.h  par_task.cc  par_task.h  parameter.cc  parameter.h  precision.cc  precision.h  quantity.cc  quantity.h  reaction.cc  reaction.h  species.cc  (+9 more)
src/model/: Makefile.am  README  batch.cc  batch.h  cstr.cc  cstr.h  ensemble.cc  ensemble.h  environment.cc  environment.h  integrate.cc  integrate.h  kmc.cc  kmc.h  lattice.cc  lattice.h  model_task.cc  model_task.h  pfr.cc  pfr.h  point.cc  point.h  reactor.cc  reactor.h  rng.cc  rng.h  state.cc  state.h
test/: .gitignore  Makefile.am  bi.chimp  bi.mech  bi.out  bi.par  bi.stdout  bi.surface  bi.task  catalyst.chimp  catalyst.mech  catalyst.out  catalyst.par  catalyst.stdout  catalyst.task  complex.chimp  complex.mech  complex.out  complex.par  complex.stdout  complex.task  event.chimp  event.coverage.par  event.coverage.task  event.event.task  event.mech  event.out  event.stdout  gas.chimp  gas.mech  gas.out  gas.par  gas.stdout  gas.task  gas_cstr.chimp  gas_cstr.out  gas_cstr.stdout  gas_cstr.task  liquid.chimp  liquid.mech  (+42 more)
