## Process this file with automake to produce Makefile.in

INCLUDES = -I$(top_srcdir)/src

noinst_LIBRARIES = libmodel.a

libmodel_a_SOURCES = batch.cc batch.h cstr.cc cstr.h ensemble.cc ensemble.h environment.cc environment.h integrate.cc integrate.h kmc.cc kmc.h lattice.cc lattice.h model_task.cc model_task.h pfr.cc pfr.h point.cc point.h reactor.cc reactor.h rng.cc rng.h state.cc state.h
